# langchain-academy

./: 0_basics.py  1_1_simple-graph.py  1_2_chains.py  1_3_Router.py  1_4_Agent.py  1_5_AgentMemory.py  2_1_StateSchema.py  2_5_ChatbotSummarization.py  3_2_Breakpoints.py  3_3_EditState.py  3_3_HumanFeedback.py  3_4_DynamicBreakpoints.py  3_4_TimeTravel_Debugging.py  envdetails.txt  pract.py  pyproject.toml
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  simple-graph.ipynb
module-2/: 2_2_StateReducers.ipynb  chatbot-summarization.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
module-3/: breakpoints.ipynb  edit-state-human-feedback.ipynb  time-travel.ipynb
